# Neon

./: .gitmodules  CMakeLists.txt  border_points.bson
include/Neon/: Neon.h  NeonCommon.h  NeonComponent.h  NeonDebugEntity.h  NeonEntity.h  NeonEvent.h  NeonFrameBufferObject.h  NeonImage.h  NeonRenderData.h  NeonScene.h  NeonShader.h  NeonSystem.h  NeonTexture.h  NeonTransform.h  NeonTriangulator.h  NeonURL.h  NeonVertexArrayObject.h  NeonVertexBufferObject.hpp  NeonWindow.h  TriangleTriangleOverlap.h
include/Neon/CUDA/: CUDACommon.h  CUDAList.h  CUDAMemoryPool.h  CUDAMesh.h  CUDASurfaceExtraction.h  CUDATSDF.h  CUDATest.h  CUDATriangulation.h
include/Neon/Component/: NeonBSPTree.h  NeonBSPTree.hpp  NeonCamera.h  NeonCameraManipulator.h  NeonCameraManipulatorOrbit.h  NeonComponent.h  NeonEventSubscriber.h  NeonLight.h  NeonMesh.h  NeonRegularGrid.h  NeonRenderData.h  NeonShader.h  NeonTexture.h  NeonTransform.h  NeonVETM.h  NeonVolume.h
include/Neon/Component/SpatialPartitioning/: NeonBSPTree.hpp  NeonRegularGrid.h  NeonSpatialHashing.h
include/Neon/System/: NeonEntityUpdateSystem.h  NeonEventSystem.h  NeonRenderSystem.h  NeonSystem.h  NeonTransformUpdateSystem.h
res/ply/: targetPoint_1.ply
res/shader/: color.vs  debugging.fs  fixedColor.vs  lighting.fs  lighting.vs  phong.fs  phong.vs  texture.fs  texture.vs  vertexShader.glsl
res/stl/: Cube.stl  spot.stl
src/: BlockA.cpp  BlockA.h  BlockA_Common.h  MiniMath.cpp  MiniMath.h  Neon.cpp  Neon.h  NeonCommon.cpp  NeonCommon.h  NeonImage.cpp  NeonImage.h  NeonShader.cpp  NeonVertexArrayObject.cpp  NeonVertexArrayObject.h  NeonVertexBufferObject.hpp  NeonWindow.cpp  NeonWindow.h  _main.cpp  csgjs_cpp.cpp  main - Create Depth Map.cpp  main - For Stitch.cpp  main - backup.cpp  main - from BSON.cpp  main - ply.cpp  main - 복사본.cpp  main-Default.cpp  main.cpp  main_.cpp  main__.cpp  main_backup_cuda_subdivide.cpp  main_backup_ear_clipping.cpp  main_backup_hollow.cpp  main_backup_show_dt3d_result.cpp  main_wop_triangulation.cpp
src/DT/: DT.h
src/Neon/: Neon.cpp  NeonCommon.cpp  NeonComponent.cpp  NeonDebugEntity.cpp  NeonEntity.cpp  NeonEvent.cpp  NeonFrameBufferObject.cpp  NeonImage.cpp  NeonRenderData.cpp  NeonScene.cpp  NeonShader.cpp  NeonSystem.cpp  NeonTexture.cpp  NeonTransform.cpp  NeonTriangulator.cpp  NeonURL.cpp  NeonVertexArrayObject.cpp  NeonWindow.cpp  TriangleTriangleOverlap.cpp
src/Neon/CUDA/: CUDACommon.cu  CUDACommon.cuh  CUDAList.cu  CUDAMemoryPool.cu  CUDAMesh.cu  CUDASurfaceExtraction - Last.cu  CUDASurfaceExtraction - WIP.cu  CUDASurfaceExtraction.cu  CUDATSDF.cu  CUDATest - 복사본.cu  CUDATest.cu  CUDATest_.cu  CUDATest_111.cu  CUDATriangulation.cu  HelloCUDA.cu  cuOctree.cu  cuOctree.h  main.cu
src/Neon/Component/: NeonBSPTree.cpp  NeonCamera.cpp  NeonCameraManipulator.cpp  NeonCameraManipulatorOrbit.cpp  NeonComponent.cpp  NeonEventSubscriber.cpp  NeonLight.cpp  NeonMesh.cpp  NeonRegularGrid.cpp  NeonRenderData.cpp  NeonShader.cpp  NeonSpatialHashing.cpp  NeonTexture.cpp  NeonTransform.cpp  NeonVETM.cpp  NeonVolume.cpp
src/Neon/Component/SpatialPartitioning/: NeonRegularGrid.cpp  NeonSpatialHashing.cpp
src/Neon/System/: NeonEntityUpdateSystem.cpp  NeonEventSystem.cpp  NeonRenderSystem.cpp  NeonSystem.cpp  NeonTransformUpdateSystem.cpp
